Fix 1px border-collapse padding bug.

--- a/css/px-data-table-sketch.css
+++ b/css/px-data-table-sketch.css
@@ -183,9 +183,7 @@ html {
   /*! Comment to prevent cssmin munging this rule with html above and borking Safari */
   box-sizing: border-box; }
 
-*,
-*:before,
-*:after {
+*, *:before, *:after {
   box-sizing: inherit; }
 
 /**
@@ -248,15 +246,13 @@ a {
   /**
  * Improve readability when focused and also mouse hovered in all browsers.
  */ }
-  a:link,
-  a:visited {
+  a:link, a:visited {
     color: #3e87e8; }
   a:hover {
     color: #3573c5; }
   a:active {
     color: #2b5ea2; }
-  a:active,
-  a:hover {
+  a:active, a:hover {
     outline: 0; }
 
 /**
@@ -339,9 +335,9 @@ a {
   padding: 0 !important;
   clip: rect(0 0 0 0) !important; }
 
-.a11y.focusable:active,
-.a11y.focusable:focus,
-.visuallyhidden.focusable:active, .visuallyhidden.focusable:focus {
+.a11y.focusable:active, .a11y.focusable:focus,
+.visuallyhidden.focusable:active,
+.visuallyhidden.focusable:focus {
   position: static;
   overflow: visible;
   width: auto;
@@ -627,9 +623,9 @@ textarea {
   box-shadow: inset 0 0 0 1px #e4e4ea;
   background-color: #efeff4;
   color: black; }
-  .text-input[readonly],
-  .text-input[disabled],
-  textarea[readonly], textarea[disabled] {
+  .text-input[readonly], .text-input[disabled],
+  textarea[readonly],
+  textarea[disabled] {
     box-shadow: none; }
   .text-input[readonly],
   textarea[readonly] {
@@ -700,8 +696,7 @@ select::-ms-expand {
 .text-input {
   height: 2em;
   line-height: 1; }
-  .text-input + [type=checkbox],
-  .text-input + [type=radio] {
+  .text-input + [type=checkbox], .text-input + [type=radio] {
     margin-left: 1.3333333333rem; }
   .text-input + .label--inline {
     margin-left: 0.6666666667rem; }
@@ -713,8 +708,7 @@ select::-ms-expand {
   .text-input:-moz-placeholder {
     padding-top: 1px; }
 
-.text-input + [type=submit],
-.text-input [type=cancel],
+.text-input + [type=submit], .text-input [type=cancel],
 .label--inline + [type=submit],
 .label--inline [type=cancel] {
   margin-left: 1.3333333333rem; }
@@ -732,8 +726,7 @@ textarea {
   cursor: pointer; }
   [type=checkbox][disabled], [type=radio][disabled] {
     cursor: not-allowed; }
-    [type=checkbox][disabled] + .label--inline,
-    [type=radio][disabled] + .label--inline {
+    [type=checkbox][disabled] + .label--inline, [type=radio][disabled] + .label--inline {
       cursor: not-allowed; }
 
 [type=checkbox] + .label--inline {
@@ -835,11 +828,7 @@ textarea {
   text-transform: none;
   white-space: nowrap;
   background-color: #e4e4ea; }
-  .btn,
-  .btn:link,
-  .btn:visited,
-  .btn:hover,
-  .btn:active {
+  .btn, .btn:link, .btn:visited, .btn:hover, .btn:active {
     color: black; }
   .btn:hover {
     border-color: #9999a3;
@@ -877,12 +866,7 @@ button.btn {
   border-radius: 0;
   padding: 0;
   line-height: inherit; }
-  .btn--bare,
-  .btn--bare:link,
-  .btn--bare:visited,
-  .btn--bare:hover,
-  .btn--bare:active,
-  .btn--bare:focus {
+  .btn--bare, .btn--bare:link, .btn--bare:visited, .btn--bare:hover, .btn--bare:active, .btn--bare:focus {
     box-shadow: none;
     background: none;
     color: inherit; }
@@ -914,8 +898,7 @@ button.btn {
     box-shadow: 0 1px 0 rgba(0, 0, 0, 0.1);
     color: white;
     background: #0a9ec1; }
-    .btn-group :checked + .btn:hover,
-    .btn-group :checked + .btn:focus {
+    .btn-group :checked + .btn:hover, .btn-group :checked + .btn:focus {
       border-color: transparent;
       box-shadow: 0 1px 0 rgba(0, 0, 0, 0.15);
       color: white;
